--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "keywords": [],
   "author": "",
   "license": "MIT",
-  "description": "",
+  "description": "NoSQL Social Network API utilising Mongoose",
   "scripts": {
     "start": "node server",
     "seed": "node utils/seed.js",
